ci: fiz a intro do novo jogo e arrumei um pouco os saves e carreagmentos, tem que arrumar a vida que sempre reseta e um rollback qu eta dando
Signed-off-by: Camillove <davicamillo2009@gmail.com>